#  I do not know what I am doing if I made a mistake please help me

[metadata]
name = unix-time-panel
version = attr: unix-time-panel.0.0.1
description = Show the current unix time in the panel
keywords = unix, python, time, panel
license = N/A
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    requests
    importlib-metadata; python_version<"3.8" 
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
